// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelTitle should match snapshot 1`] = `
<ForwardRef
  style={
    Object {
      "flex": 1,
    }
  }
  testID="channel.title.button"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "position": "relative",
          "top": -1,
        },
        Object {
          "width": "90%",
        },
      ]
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": undefined,
          "fontSize": 18,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
      testID="channel.nav_bar.title"
    >
      My Channel
    </Text>
    <CompassIcon
      name="chevron-down"
      size={24}
      style={
        Object {
          "color": undefined,
          "marginHorizontal": 1,
        }
      }
    />
  </View>
</ForwardRef>
`;

exports[`ChannelTitle should match snapshot when is DM and has guests and the teammate is the guest (when can show subtitles) 1`] = `
<ForwardRef
  style={
    Object {
      "flex": 1,
    }
  }
  testID="channel.title.button"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "position": "relative",
          "top": -1,
        },
        Object {
          "width": "80%",
        },
      ]
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": undefined,
          "fontSize": 18,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
      testID="channel.nav_bar.title"
    >
      Other user
    </Text>
    <CompassIcon
      name="chevron-down"
      size={24}
      style={
        Object {
          "color": undefined,
          "marginHorizontal": 1,
        }
      }
    />
    <CustomStatusEmoji
      emojiSize={18}
      style={
        Array [
          Object {
            "color": undefined,
            "marginHorizontal": 1,
          },
          Object {
            "marginHorizontal": 5,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "position": "relative",
        "top": -1,
        "width": "90%",
      }
    }
  >
    <FormattedText
      defaultMessage="This person is a guest"
      ellipsizeMode="tail"
      id="channel.isGuest"
      numberOfLines={1}
      style={
        Object {
          "color": undefined,
          "fontSize": 14,
          "opacity": 0.6,
        }
      }
    />
  </View>
</ForwardRef>
`;

exports[`ChannelTitle should match snapshot when is DM and has guests but the teammate is not the guest (when can show subtitles) 1`] = `
<ForwardRef
  style={
    Object {
      "flex": 1,
    }
  }
  testID="channel.title.button"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "position": "relative",
          "top": -1,
        },
        Object {
          "width": "80%",
        },
      ]
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": undefined,
          "fontSize": 18,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
      testID="channel.nav_bar.title"
    >
      Other user
    </Text>
    <CompassIcon
      name="chevron-down"
      size={24}
      style={
        Object {
          "color": undefined,
          "marginHorizontal": 1,
        }
      }
    />
    <CustomStatusEmoji
      emojiSize={18}
      style={
        Array [
          Object {
            "color": undefined,
            "marginHorizontal": 1,
          },
          Object {
            "marginHorizontal": 5,
          },
        ]
      }
    />
  </View>
</ForwardRef>
`;

exports[`ChannelTitle should match snapshot when isSelfDMChannel is true 1`] = `
<ForwardRef
  style={
    Object {
      "flex": 1,
    }
  }
  testID="channel.title.button"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "position": "relative",
          "top": -1,
        },
        Object {
          "width": "90%",
        },
      ]
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": undefined,
          "fontSize": 18,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
      testID="channel.nav_bar.title"
    >
      <FormattedText
        defaultMessage="{displayname} (you)"
        id="channel_header.directchannel.you"
        values={
          Object {
            "displayname": "My User",
          }
        }
      />
    </Text>
    <CompassIcon
      name="chevron-down"
      size={24}
      style={
        Object {
          "color": undefined,
          "marginHorizontal": 1,
        }
      }
    />
  </View>
</ForwardRef>
`;

exports[`ChannelTitle should match snapshot with custom status emoji 1`] = `
<ForwardRef
  style={
    Object {
      "flex": 1,
    }
  }
  testID="channel.title.button"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "position": "relative",
          "top": -1,
        },
        Object {
          "width": "80%",
        },
      ]
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": undefined,
          "fontSize": 18,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
      testID="channel.nav_bar.title"
    >
      My Channel
    </Text>
    <CompassIcon
      name="chevron-down"
      size={24}
      style={
        Object {
          "color": undefined,
          "marginHorizontal": 1,
        }
      }
    />
    <CustomStatusEmoji
      emojiSize={18}
      style={
        Array [
          Object {
            "color": undefined,
            "marginHorizontal": 1,
          },
          Object {
            "marginHorizontal": 5,
          },
        ]
      }
    />
  </View>
</ForwardRef>
`;
